<resources>
    <string name="app_name">Material Design</string>
    <string name="app_name1">Test avec Login</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="listemotifs">Liste des motifs</string>
    <string-array name="motif">
        <item>Liste des différents motifs</item>
        <item>Congé individuel de formation</item>
        <item>Congé maladie</item>
        <item>RTT</item>
        <item>Congé parternité/maternité</item>
    </string-array>

    <string name="nav_item_home">Historique des demandes</string>
    <string name="nav_item_friends">Faire sa demande</string>
    <string name="nav_item_notifications">Consulter son solde</string>
    <string name="nav_item_temps">Temps passé au travail</string>

    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="red_string">Red</string>
    <string name="blue_string">Blue</string>
    <string name="green_string">Green</string>
    <string name="create_account">Créer un compte</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="solde">Solde de vos congés</string>
    <string name="connect">Se connecter</string>
    <string name="sinscrire">S\'inscrire</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
        <item>@string/nav_item_temps</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Historique des demandes</string>
    <string name="title_temps">Temps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>