<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <!--<item-->
        <!--android:id="@+id/action_search"-->
        <!--android:title="@string/action_search"-->
        <!--android:orderInCategory="100"-->
        <!--android:icon="@drawable/ic_action"-->
        <!--app:showAsAction="ifRoom" />-->

    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:title="@string/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--app:showAsAction="never" />-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_red"
            android:title="@string/red_string"
            android:orderInCategory="1"
            app:showAsAction="never"/>
        <item
            android:id="@+id/menu_blue"
            android:title="@string/blue_string"
            android:orderInCategory="1"
            app:showAsAction="never" />
        <item
            android:id="@+id/menu_green"
            android:title="@string/green_string"
            android:orderInCategory="1"
            app:showAsAction="never" />
    </group>
</menu>
